--- a/index.html
+++ b/index.html
@@ -1032,7 +1032,7 @@
 
         document.addEventListener('DOMContentLoaded', function () {
             liff.init({
-                liffId: '2007437399-mg26oa0W'
+                liffId: '2007763180-Ma1bPlor'
             }).then(() => {
                 console.log('LIFF初期化成功');
             }).catch((err) => {
