--- a/index.html
+++ b/index.html
@@ -1680,6 +1680,17 @@
                         continue;
                     }
 
+                    // 18時以降に終了する予約を不可にする (17:30は可)
+                    if (slotEnd.getHours() === 19 && slotEnd.getMinutes() > 30) {
+                        cell.textContent = '✕';
+                        cell.classList.add('unavailable');
+                        continue;
+                    } else if (slotEnd.getHours() > 19 && slotEnd.getMinutes() > 30) {
+                        cell.textContent = '✕';
+                        cell.classList.add('unavailable');
+                        continue;
+                    }
+
                     // 既に過ぎた時間帯は×にする
                     if (slotStart < now) {
                         cell.textContent = '✕';
